[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skytools"
version = "0.0.1"
dependencies = ['numpy', 'astropy',]

[tool.setuptools.packages.find]
where = ["src"]
